[package]
name = "oshavery-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.22"
uuid = { git = "https://github.com/uuid-rs/uuid", features = ["v7"] }
validator = { version = "0.16.0", features = ["derive"] }
